# aio-distributed

microservice/argoworkflows/training/: prepare-trainer.yaml  train-pipelines.yaml
microservice/kubernetes-specs/: adconfigmapthreshold.yaml  adinferencedeployment.yaml  adservicedeployment.yaml  configrole.yaml  configrolebinding.yaml  feservicedeployment.yaml
microservice/service/ad-inference-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
microservice/service/ad-inference-service/src/: __init__.py
microservice/service/ad-inference-service/src/ad_inference_service/: main.py  test.py
microservice/service/ml-ad-service/: Dockerfile  README.md  pyproject.toml  service_requirements.txt  setup.py
microservice/service/ml-preprocessing-service/: Dockerfile  README.md  pyproject.toml  service_requirements.txt  setup.py
microservice/toolboxclient/ml-toolbox-client/: Dockerfile  pyproject.toml  requirements.txt  setup.py  tox.ini
microservice/training/ad-training/: Dockerfile  requirements.txt  setup.py  tox.ini
microservice/training/ad-training-featureeng/: Dockerfile  README.md  pyproject.toml  setup.py  tox.ini
scalability/: .gitignore  ClusterRoleconfig.yaml
scalability/aio/: ENV.txt
scalability/aio/Metadata-store/: metadata_final.ipynb  metadata_final.py
scalability/aio/Non-seasonal-trend/: NS_trend_main.ipynb  PKG-INFO  main.ipynb  main.py  pyproject.toml  setup.py  spark2.ipynb  spark_times.txt  tox.ini  wide_to_long.ipynb  worker.yaml
scalability/aio/Non-seasonal-white-noise/: AIO_clustering_zsofi-moving_avg.py
(+80 files in other folders)
